force-app/main/default/objects/Research_Project_Master__c/Research_Project_Master__c.object-meta.xml
<CustomObject>
    <label>UXR Scout</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UXR Scout</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>