force-app/main/default/objects/Research_Project_Master__c/fields/Additional_Participant_Status__c.field-meta.xml
<CustomField>
    <fullName>Additional_Participant_Status__c</fullName>
    <label>Additional Participant Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>