force-app/main/default/objects/Research_Project_Master__c/fields/Approver_Comment__c.field-meta.xml
<CustomField>
    <fullName>Approver_Comment__c</fullName>
    <label>Approver Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>