force-app/main/default/objects/Research_Project_Master__c/fields/Calendly_EventId__c.field-meta.xml
<CustomField>
    <fullName>Calendly_EventId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Calendly EventId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>