force-app/main/default/objects/Research_Project_Master__c/fields/CSV_Error__c.field-meta.xml
<CustomField>
    <fullName>CSV_Error__c</fullName>
    <label>CSV Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>