force-app/main/default/objects/Research_Project_Master__c/fields/Describe_Incentive_Type__c.field-meta.xml
<CustomField>
    <fullName>Describe_Incentive_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Describe Incentive Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>