force-app/main/default/objects/Research_Project_Master__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>what are you aiming to study, for what purpose, and what segment of customers?</inlineHelpText>
    <label>Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>