force-app/main/default/objects/Research_Project_Master__c/fields/How_long_will_your_interviews_be__c.field-meta.xml
<CustomField>
    <fullName>How_long_will_your_interviews_be__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>How long will your interviews be?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>