force-app/main/default/objects/Research_Project_Master__c/fields/Incentive_Approval_Comment__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Approval_Comment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Incentive Approval Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>