force-app/main/default/objects/Research_Project_Master__c/fields/Last_View_Calendar_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_View_Calendar_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last View Calendar Date</label>
    <type>Date</type>
</CustomField>