force-app/main/default/objects/Research_Project_Master__c/fields/Last_View_Survey_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_View_Survey_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last View Survey Date</label>
    <type>Date</type>
</CustomField>