force-app/main/default/objects/Research_Project_Master__c/fields/NDA_URL__c.field-meta.xml
<CustomField>
    <fullName>NDA_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NDA URL</label>
    <type>Url</type>
</CustomField>