force-app/main/default/objects/Research_Project_Master__c/fields/Number_of_Expected_Participant__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Expected_Participant__c</fullName>
    <label>Number of Expected Participant</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>