force-app/main/default/objects/Research_Project_Master__c/fields/Number_of_Participants_to_Add_to_Project__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Participants_to_Add_to_Project__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Desired # of Participants</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>