force-app/main/default/objects/Research_Project_Master__c/fields/Primary_calendly_URL__c.field-meta.xml
<CustomField>
    <fullName>Primary_calendly_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Calendly URL</label>
    <type>Url</type>
</CustomField>