force-app/main/default/objects/Research_Project_Master__c/fields/Project_Approval_Code__c.field-meta.xml
<CustomField>
    <fullName>Project_Approval_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This code comes from your segment’s research roadmap or the usability testing program. This code is required in order to recruit with Scout or request incentives. Contact your segment researcher or leads for more information.</inlineHelpText>
    <label>Project Approval Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>