force-app/main/default/objects/Research_Project_Master__c/fields/Project_Brief_URL__c.field-meta.xml
<CustomField>
    <fullName>Project_Brief_URL__c</fullName>
    <label>Project Brief URL</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>