force-app/main/default/objects/Research_Project_Master__c/fields/Project_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_Completion_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Project Completion Date</label>
    <type>Date</type>
</CustomField>