force-app/main/default/objects/Research_Project_Master__c/fields/Project_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>End Date</label>
    <type>Date</type>
</CustomField>