force-app/main/default/objects/Research_Project_Master__c/fields/Project_Id__c.field-meta.xml
<CustomField>
    <fullName>Project_Id__c</fullName>
    <description>We are using this field in email service to identity project master record</description>
    <displayFormat>p-{000000}</displayFormat>
    <label>Project Id</label>
    <type>AutoNumber</type>
</CustomField>