force-app/main/default/objects/Research_Project_Master__c/fields/Project_Leads__c.field-meta.xml
<CustomField>
    <fullName>Project_Leads__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Project Lead(s)</label>
    <type>TextArea</type>
</CustomField>