force-app/main/default/objects/Research_Project_Master__c/fields/Re_Open_Date__c.field-meta.xml
<CustomField>
    <fullName>Re_Open_Date__c</fullName>
    <description>Project re-open date.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Re-Open Date</label>
    <type>Date</type>
</CustomField>