force-app/main/default/objects/Research_Project_Master__c/fields/Screener_URL__c.field-meta.xml
<CustomField>
    <fullName>Screener_URL__c</fullName>
    <label>Screener URL</label>
    <type>Url</type>
</CustomField>