force-app/main/default/objects/Research_Project_Master__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <label>Segment(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ERs - Core Biz</fullName>
            </value>
            <value>
                <fullName>ERs - Big Desk</fullName>
            </value>
            <value>
                <fullName>EEs - Members</fullName>
            </value>
            <value>
                <fullName>Accountants</fullName>
            </value>
            <value>
                <fullName>Horizontal</fullName>
            </value>
            <value>
                <fullName>Experience Foundations</fullName>
            </value>
            <value>
                <fullName>GEP - Embedded Payroll</fullName>
            </value>
            <value>
                <fullName>Growth</fullName>
            </value>
            <value>
                <fullName>GWS - Developers</fullName>
                <isActive>false</isActive>
                <label>GWS - Developers</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>