force-app/main/default/objects/Research_Project_Master__c/fields/Survey_Id__c.field-meta.xml
<CustomField>
    <fullName>Survey_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Qualtrics Survey ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>