force-app/main/default/objects/Research_Project_Master__c/fields/Total_Participants_In_Research__c.field-meta.xml
<CustomField>
    <fullName>Total_Participants_In_Research__c</fullName>
    <label>Total Participants In Research</label>
    <summaryForeignKey>Research_Project_Detail__c.Research_Project_Master__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>