force-app/main/default/objects/Research_Project_Master__c/fields/Total_Project_Incentive__c.field-meta.xml
<CustomField>
    <fullName>Total_Project_Incentive__c</fullName>
    <label>Total Project Incentive</label>
    <summarizedField>Research_Project_Detail__c.Incentive__c</summarizedField>
    <summaryFilterItems>
        <field>Research_Project_Detail__c.Research_Participant_Status__c</field>
        <operation>equals</operation>
        <value>Attended</value>
    </summaryFilterItems>
    <summaryForeignKey>Research_Project_Detail__c.Research_Project_Master__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>