force-app/main/default/objects/Research_Project_Master__c/fields/Type_of_people_are_you_hoping_to_contact__c.field-meta.xml
<CustomField>
    <fullName>Type_of_people_are_you_hoping_to_contact__c</fullName>
    <description>What kinds of people are you hoping to find &amp; contact?</description>
    <inlineHelpText>What kind of customers are you hoping to study?</inlineHelpText>
    <label>What kind of customers are you hoping...</label>
    <type>TextArea</type>
</CustomField>