force-app/main/default/objects/Research_Project_Master__c/fields/Type_of_Research__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Research__c</fullName>
    <label>Type of Research</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unmoderated - Survey</fullName>
            </value>
            <value>
                <fullName>Moderated - Remote interview</fullName>
            </value>
            <value>
                <fullName>Moderated - In-person interview</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Unmoderated - Diary</fullName>
            </value>
            <value>
                <fullName>Unmoderated - Usability test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>