force-app/main/default/objects/Research_Project_Master__c/fields/UX_Research_Plan_URL__c.field-meta.xml
<CustomField>
    <fullName>UX_Research_Plan_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UX Research Plan URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>