force-app/main/default/objects/Research_Project_Master__c/fields/Zoom_link_for_participant_interviews__c.field-meta.xml
<CustomField>
    <fullName>Zoom_link_for_participant_interviews__c</fullName>
    <inlineHelpText>Zoom link for participant interviews</inlineHelpText>
    <label>Zoom link for participant interviews</label>
    <length>255</length>
    <type>Text</type>
</CustomField>