force-app/main/default/objects/Research_Project_Master__c/fields/Zoom_link_for_post_interview_discussions__c.field-meta.xml
<CustomField>
    <fullName>Zoom_link_for_post_interview_discussions__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Zoom link for post-interview discussions</inlineHelpText>
    <label>Zoom link for post-interview discussions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>